# embdr

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-publish.yml
deploy/: Dockerfile.nginx  certbot-renew-hook-embd-nginx.sh  custom-ips.conf  docker-compose.le.yml  entrypoint.sh  install-certbot-renew-hook.sh  nginx.conf.template  update-openai-ips.sh
docs/: architecture.puml  chatgpt-gpt-instructions.md  deploy-flow.puml  engineering-notes.md  mcp.md  query-flow.puml  serve-flow.puml
scripts/: show-benchmarks.sh
scripts/ops/: embd-stack.sh  rsync-chroma-to-server.sh
src/embd/: __init__.py  cli.py  config.py  display_format.py  mcp_server.py  perf.py  search.py  server.py  shell.py
src/embd/embedding/: encoder.py
src/embd/ingestion/: bm25_index.py  chunker.py  contextual.py  doc_date.py  docx_extractor.py  epub_extractor.py  extractor.py  ingest.py  ocr.py  registry.py  scanner.py  text_extractor.py  watcher.py  web_extractor.py  xlsx_extractor.py
src/embd/qa/: generator_claude.py  generator_mlx.py  generator_ollama.py  hybrid_retriever.py  retriever.py  token_usage.py
src/embd/store/: meta_db.py  vector_store.py
tests/: test_bm25.py  test_contextual.py  test_meta_db.py  test_rrf.py
